test/zinc_source/compile_errors/structs/17_unknown_field_with_spread.zn
// expected-error: struct 'Config' has no field 'missing'

struct Config {
    a: i64
}

fn main() {
    base = Config { a: 1 }
    config = Config { ..base, missing: 2 }
    print(config.a)
}
